--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -54,27 +54,8 @@
 
               <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
                 <li><a href="#home-section" class="nav-link">Home</a></li>
-                <li class="has-children">
-                  <a href="#features-section" class="nav-link">Features</a>
-                  <ul class="dropdown">
-                    <li><a href="#" class="nav-link">Money Saving</a></li>
-                    <li><a href="#" class="nav-link">Powerful Apps</a></li>
-                    <li><a href="#" class="nav-link">Efficient Support</a></li>
-                    <li><a href="#" class="nav-link">Innovative Technologies</a></li>
-                    <li><a href="#" class="nav-link">Corporate Solutions</a></li>
-                    <li class="has-children">
-                      <a href="#">More Links</a>
-                      <ul class="dropdown">
-                        <li><a href="#">Menu One</a></li>
-                        <li><a href="#">Menu Two</a></li>
-                        <li><a href="#">Menu Three</a></li>
-                      </ul>
-                    </li>
-                  </ul>
-                </li>
+                <li><a href="#features-section" class="nav-link">Features</a></li>
                 <li><a href="#pricing-section" class="nav-link">Pricing</a></li>
-
-
                 <li><a href="#blog-section" class="nav-link">Blog</a></li>
                 <li><a href="#contact-section" class="nav-link">Contact</a></li>
 
@@ -133,7 +114,7 @@
             <div class="d-flex feature-v1">
               <span class="wrap-icon icon-users"></span>
               <div>
-                <h3>Searches Keywords</h3>
+                <h3>Keyword Searching</h3>
                 <p>Provides related information</p>
               </div>
             </div>
@@ -142,7 +123,7 @@
               <span class="wrap-icon icon-layers"></span>
               <div>
                 <h3>Generates Credibility Score</h3>
-                <p>Shows the crediblity of the publisher.</p>
+                <p>Shows the crediblity of the publisher</p>
               </div>
             </div>
 
@@ -156,14 +137,14 @@
           <div class="col-lg-5 order-lg-1 ml-auto">
             <div class="mb-4">
               <h2 class="section-title-2">Intuitive Technology</h2>
-              <p></p>
+              <p>Intuitive technologies allow us to provide you with many features and ease of use</p>
             </div>
 
             <div class="d-flex feature-v1">
               <span class="wrap-icon icon-cog"></span>
               <div>
                 <h3>Many Features</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <p>The selection of features available is all that you need</p>
               </div>
             </div>
 
@@ -171,7 +152,7 @@
               <span class="wrap-icon icon-bolt"></span>
               <div>
                 <h3>Easy to use</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <p>So that anyone can use the app without any complicated non-sense</p>
               </div>
             </div>
 
@@ -184,23 +165,23 @@
           </div>
           <div class="col-lg-5 mr-auto">
             <div class="mb-4">
-              <h2 class="section-title-2">Safe secure and reliable</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi facere sequi excepturi pariatur quos itaque magni, impedit a quas qui?</p>
+              <h2 class="section-title-2">Reliable and Critical</h2>
+              <p>The extension gives you different and real views that promotes critical thinking to form your own opinion</p>
             </div>
 
             <div class="d-flex feature-v1">
               <span class="wrap-icon icon-users"></span>
               <div>
-                <h3>Strategic Partners</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <h3>Strategic Information</h3>
+                <p>Provides information that counters biased views</p>
               </div>
             </div>
 
             <div class="d-flex feature-v1">
               <span class="wrap-icon icon-layers"></span>
               <div>
-                <h3>Business in Mind</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <h3>Health in Mind</h3>
+                <p>Promoting positive mental health</p>
               </div>
             </div>
 
