--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -46,7 +46,7 @@
         <div class="row align-items-center">
 
           <div class="col-6 col-xl-2">
-            <div class="mb-0 site-logo"><a href="index.html" class="mb-0">TurthFool<span class="text-primary">.</span> </a></div>
+            <div class="mb-0 site-logo"><a href="index.html" class="mb-0">TruthFool<span class="text-primary">.</span> </a></div>
           </div>
 
           <div class="col-12 col-md-10 d-none d-xl-block">
@@ -55,8 +55,6 @@
               <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
                 <li><a href="#home-section" class="nav-link">Home</a></li>
                 <li><a href="#features-section" class="nav-link">Features</a></li>
-                <li><a href="#pricing-section" class="nav-link">Pricing</a></li>
-                <li><a href="#blog-section" class="nav-link">Blog</a></li>
                 <li><a href="#contact-section" class="nav-link">Contact</a></li>
 
                 <li class="social"><a href="#contact-section" class="nav-link"><span class="icon-facebook"></span></a></li>
@@ -82,8 +80,8 @@
           <div class="col-lg-10">
             <div class="mb-5">
               <h1 class="hero-heading">A <strong>TruthFool</strong> way of living online</h1> 
-              <p>An extension which provides you all the information you need for a balanced view</p>
-              <a href="#" class="btn btn-primary">Try the Demo</a>
+              <p>An extension which provides you all the information you need to become a responsible digital citizen.</p>
+              <a href="#" class="btn btn-primary">Try the Demo <onclick> </onclick></a>
             </div>
             <img src="static\images\Balance.png" alt="image" width='1712' height='1385' class="img-fluid">
           </div>
@@ -103,7 +101,7 @@
         </div>
         <div class="row align-items-center mb-5">
           <div class="col-lg-6 mb-5 order-lg-2 mb-lg-0" data-aos="fade-right">
-            <img src="static\images/untree.co_dashboard_mocklayout.jpg" alt="Image" class="img-fluid img-shadow">
+            <img src="static\images/Demo2.png" alt="Image" class="img-fluid img-shadow">
           </div>
           <div class="col-lg-5 mr-auto">
             <div class="mb-4">
@@ -132,7 +130,7 @@
 
         <div class="row align-items-center">
           <div class="col-lg-6 mb-5 mb-lg-0" data-aos="fade-left">
-            <img src="static\images/untree.co_dashboard_mocklayout.jpg" alt="Image" class="img-fluid img-shadow">
+            <img src="static\images/Demo3.png" alt="Image" class="img-fluid img-shadow">
           </div>
           <div class="col-lg-5 order-lg-1 ml-auto">
             <div class="mb-4">
@@ -152,7 +150,7 @@
               <span class="wrap-icon icon-bolt"></span>
               <div>
                 <h3>Easy to use</h3>
-                <p>So that anyone can use the app without any complicated non-sense</p>
+                <p>So that anyone can use the app without any complicated setup</p>
               </div>
             </div>
 
@@ -161,19 +159,19 @@
 
         <div class="row align-items-center mb-5">
           <div class="col-lg-6 mb-5 order-lg-2 mb-lg-0" data-aos="fade-right">
-            <img src="static\images/untree.co_dashboard_mocklayout.jpg" alt="Image" class="img-fluid img-shadow">
+            <img src="static\images/Demo1.png" alt="Image" class="img-fluid img-shadow">
           </div>
           <div class="col-lg-5 mr-auto">
             <div class="mb-4">
               <h2 class="section-title-2">Reliable and Critical</h2>
-              <p>The extension gives you different and real views that promotes critical thinking to form your own opinion</p>
+              <p>Our extension gives you real and different views that promote critical thinking to form your own opinion</p>
             </div>
 
             <div class="d-flex feature-v1">
               <span class="wrap-icon icon-users"></span>
               <div>
-                <h3>Strategic Information</h3>
-                <p>Provides information that counters biased views</p>
+                <h3>Better Decision Making</h3>
+                <p>with various articles readily available, you can make better decisions on matters that are important to you</p>
               </div>
             </div>
 
@@ -181,7 +179,7 @@
               <span class="wrap-icon icon-layers"></span>
               <div>
                 <h3>Health in Mind</h3>
-                <p>Promoting positive mental health</p>
+                <p>Promoting positive way of thinking to combat the negative state of mind</p>
               </div>
             </div>
 
@@ -190,257 +188,6 @@
 
       </div>
     </div>
-
-    <div class="site-section">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-7 text-center mb-5 mx-auto">
-            <span class="subtitle-1">More Features</span>
-            <h2 class="section-title-1 font-weight-bold">What People Says</h2>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-6 col-sm-6 col-md-4 col-lg-3 mb-4" data-aos="fade-up" data-aos-delay="0">
-            <div class="feature-v2">
-              <span class="icon-people_outline"></span>
-              <h3>User Collaboration</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem saepe aut, vel. Nemo.</p>
-            </div>
-          </div>
-          <div class="col-6 col-sm-6 col-md-4 col-lg-3 mb-4" data-aos="fade-up" data-aos-delay="100">
-            <div class="feature-v2">
-              <span class="icon-phone_android"></span>
-              <h3>Mobile Integration</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem saepe aut, vel. Nemo.</p>
-            </div>
-          </div>
-          <div class="col-6 col-sm-6 col-md-4 col-lg-3 mb-4" data-aos="fade-up" data-aos-delay="200">
-            <div class="feature-v2">
-              <span class="icon-pie_chart"></span>
-              <h3>Smart Analytics</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem saepe aut, vel. Nemo.</p>
-            </div>
-          </div>
-          <div class="col-6 col-sm-6 col-md-4 col-lg-3 mb-4" data-aos="fade-up" data-aos-delay="300">
-            <div class="feature-v2">
-              <span class="icon-public"></span>
-              <h3>Geolocation</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem saepe aut, vel. Nemo.</p>
-            </div>
-          </div>
-
-          <div class="col-6 col-sm-6 col-md-4 col-lg-3 mb-4" data-aos="fade-up" data-aos-delay="0">
-            <div class="feature-v2">
-              <span class=" icon-search2"></span>
-              <h3>Easy to find</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem saepe aut, vel. Nemo.</p>
-            </div>
-          </div>
-          <div class="col-6 col-sm-6 col-md-4 col-lg-3 mb-4" data-aos="fade-up" data-aos-delay="100">
-            <div class="feature-v2">
-              <span class=" icon-security"></span>
-              <h3>Good Security</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem saepe aut, vel. Nemo.</p>
-            </div>
-          </div>
-          <div class="col-6 col-sm-6 col-md-4 col-lg-3 mb-4" data-aos="fade-up" data-aos-delay="200">
-            <div class="feature-v2">
-              <span class="icon-visibility"></span>
-              <h3>Aesthetic</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem saepe aut, vel. Nemo.</p>
-            </div>
-          </div>
-          <div class="col-6 col-sm-6 col-md-4 col-lg-3 mb-4" data-aos="fade-up" data-aos-delay="300">
-            <div class="feature-v2">
-              <span class="icon-settings"></span>
-              <h3>Dashboard</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem saepe aut, vel. Nemo.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="site-section bg-light testimonial-wrap" id="testimonials-section">
-      <div class="container">
-        <div class="row">
-          <div class="col-12 text-center mb-5">
-            <span class="subtitle-1">Testimonials</span>
-            <h2 class="section-title-1 font-weight-bold">What People Says</h2>
-          </div>
-        </div>
-      </div>
-      <div class="slide-one-item home-slider owl-carousel">
-        <div>
-          <div class="testimonial">
-
-            <blockquote class="mb-5">
-              <p>&ldquo;Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.&rdquo;</p>
-            </blockquote>
-
-            <figure class="mb-4 d-flex align-items-center justify-content-center">
-              <div><img src="static\images/person_3.jpg" alt="Image" class="w-50 img-fluid mb-3"></div>
-              <p>John Smith</p>
-            </figure>
-          </div>
-        </div>
-        <div>
-          <div class="testimonial">
-
-            <blockquote class="mb-5">
-              <p>&ldquo;A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.&rdquo;</p>
-            </blockquote>
-            <figure class="mb-4 d-flex align-items-center justify-content-center">
-              <div><img src="static\images/person_2.jpg" alt="Image" class="w-50 img-fluid mb-3"></div>
-              <p>Christine Aguilar</p>
-            </figure>
-
-          </div>
-        </div>
-
-        <div>
-          <div class="testimonial">
-
-            <blockquote class="mb-5">
-              <p>&ldquo;Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.&rdquo;</p>
-            </blockquote>
-            <figure class="mb-4 d-flex align-items-center justify-content-center">
-              <div><img src="static\images/person_4.jpg" alt="Image" class="w-50 img-fluid mb-3"></div>
-              <p>Robert Spears</p>
-            </figure>
-
-
-          </div>
-        </div>
-
-        <div>
-          <div class="testimonial">
-
-            <blockquote class="mb-5">
-              <p>&ldquo;The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen. She packed her seven versalia, put her initial into the belt and made herself on the way.&rdquo;</p>
-            </blockquote>
-            <figure class="mb-4 d-flex align-items-center justify-content-center">
-              <div><img src="static\images/person_4.jpg" alt="Image" class="w-50 img-fluid mb-3"></div>
-              <p>Bruce Rogers</p>
-            </figure>
-
-          </div>
-        </div>
-
-      </div>
-    </div>
-
-    <div class="site-section" id="pricing-section">
-      <div class="container">
-        <div class="row justify-content-center text-center">
-          <div class="col-7 text-center mb-5">
-            <span class="subtitle-1">Pricing</span>
-            <h2 class="section-title-1 font-weight-bold">Pricing for All</h2>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-lg-4 col-md-6 mb-4 mb-lg-0 pricing">
-            <div class="border p-5 text-center rounded">
-              <h3>Starter</h3>
-              <div class="price mb-3"><sup class="currency">$</sup><span class="number">30</span> <span class="per">/year</span></div>
-              <p class="text-muted mb-4">* Billed annualy or $10 per month</p>
-              <ul class="list-unstyled ul-check text-left success mb-5">
-                <li>Max 5 users</li>
-                <li>29 local security</li>
-                <li class="text-muted"><del>Desktop App</del></li>
-                <li class="text-muted"><del>Email Support</del></li>
-                <li class="text-muted"><del>Phone Support 24/7</del></li>
-              </ul>
-              <p><a href="#" class="btn btn-lg btn-secondary rounded-0 btn-block">Buy Now</a></p>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 mb-4 mb-lg-0 pricing">
-            <div class="border p-5 text-center rounded">
-              <h3>Professional</h3>
-              <div class="price mb-3"><sup class="currency">$</sup><span class="number">72</span> <span class="per">/year</span></div>
-              <p class="text-muted mb-4">* Billed annualy or $30 per month</p>
-              <ul class="list-unstyled ul-check text-left success mb-5">
-                <li>Max 10 users</li>
-                <li>29 local security</li>
-                <li>Desktop App</li>
-                <li>Email Support</li>
-                <li class="text-muted"><del>Phone Support 24/7</del></li>
-              </ul>
-              <p><a href="#" class="btn btn-lg btn-primary rounded-0 btn-block">Buy Now</a></p>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 mb-4 mb-lg-0 pricing">
-            <div class="border p-5 text-center rounded">
-              <h3>Enterprise</h3>
-              <div class="price mb-3"><sup class="currency">$</sup><span class="number">130</span> <span class="per">/year</span></div>
-              <p class="text-muted mb-4">* Billed annualy or $10 per month</p>
-              <ul class="list-unstyled ul-check text-left success mb-5">
-                <li>Unlimitted users</li>
-                <li>29 local security</li>
-                <li>Desktop App</li>
-                <li>Email Support</li>
-                <li>Phone Support 24/7</li>
-              </ul>
-              <p><a href="#" class="btn btn-lg btn-secondary rounded-0 btn-block">Buy Now</a></p>
-            </div>
-          </div>
-
-        </div>
-      </div>
-    </div>   
-
-    <div class="site-section bg-light" id="blog-section">
-      <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-md-7 text-center">
-            <span class="sub-title">Blog</span>
-            <h2 class="font-weight-bold text-black">News &amp; Updates</h2>
-            <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi, explicabo, quasi. Magni deserunt sunt labore.</p>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up" data-aos-delay="">
-            <div class="h-entry">
-              <a href="single.html">
-                <img src="static/images/img_2.jpg" alt="Image" class="img-fluid">
-              </a>
-              <h2 class="font-size-regular"><a href="#">Best For Web Startups and Web Apps</a></h2>
-              <div class="meta mb-4">Ham Brook <span class="mx-2">&bullet;</span> Jan 18, 2020<span class="mx-2">&bullet;</span> <a href="#">News</a></div>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus eligendi nobis ea maiores sapiente veritatis reprehenderit suscipit quaerat rerum voluptatibus a eius.</p>
-              <p><a href="#">Continue Reading...</a></p>
-            </div> 
-          </div>
-          <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up" data-aos-delay="100">
-            <div class="h-entry">
-              <a href="single.html">
-                <img src="static/images/img_4.jpg" alt="Image" class="img-fluid">
-              </a>
-              <h2 class="font-size-regular"><a href="#">Best For Web Startups and Web Apps</a></h2>
-              <div class="meta mb-4">James Phelps <span class="mx-2">&bullet;</span> Jan 18, 2020<span class="mx-2">&bullet;</span> <a href="#">News</a></div>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus eligendi nobis ea maiores sapiente veritatis reprehenderit suscipit quaerat rerum voluptatibus a eius.</p>
-              <p><a href="#">Continue Reading...</a></p>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up" data-aos-delay="200">
-            <div class="h-entry">
-              <a href="single.html">
-                <img src="static/images/img_2.jpg" alt="Image" class="img-fluid">
-              </a>
-              <h2 class="font-size-regular"><a href="#">Best For Web Startups and Web Apps</a></h2>
-              <div class="meta mb-4">James Phelps <span class="mx-2">&bullet;</span> Jan 18, 2020<span class="mx-2">&bullet;</span> <a href="#">News</a></div>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus eligendi nobis ea maiores sapiente veritatis reprehenderit suscipit quaerat rerum voluptatibus a eius.</p>
-              <p><a href="#">Continue Reading...</a></p>
-            </div> 
-          </div>
-          
-        </div>
-      </div>
-    </div>
-
 
 
     <div class="site-section pb-0 bg-light" id="contact-section">
@@ -450,7 +197,7 @@
           <div class="col-md-7 text-center">
             <span class="sub-title">Contact</span>
             <h2 class="font-weight-bold text-black">Get In Touch</h2>
-            <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi, explicabo, quasi. Magni deserunt sunt labore.</p>
+            <p class="mb-5">Do you have some concerns or questions about this extension?</p>
           </div>
         </div>
 
@@ -461,7 +208,7 @@
           <div class="col-md-4 text-center">
             <p class="mb-4">
               <span class="icon-room d-block h2 text-primary"></span>
-              <span>203 Fake St. Mountain View, San Francisco, California, USA</span>
+              <span>123 Fake Street, Jaro, Iloilo City, Iloilo</span>
             </p>
           </div>
           <div class="col-md-4 text-center">
@@ -473,7 +220,7 @@
           <div class="col-md-4 text-center">
             <p class="mb-0">
               <span class="icon-mail_outline d-block h2 text-primary"></span>
-              <a href="#">youremail@domain.com</a>
+              <a href="#">notrealemail@emailsite.com</a>
             </p>
           </div>
         </div>
@@ -526,7 +273,7 @@
                 </div>
               </div>
 
-
+              
             </form>
           </div>
           
@@ -534,14 +281,7 @@
       </div>
     </div>
 
-    <div class="site-section text-center">
-      <div class="container">
-        <h2 class="text-black mb-3">Join over 1,700 companies that trust us.</h2>
-        <p class="mb-5">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-        <p><a href="#" class="btn btn-primary">Try it for free</a></p>
-      </div>
-    </div>
-
+    
     <footer class="site-footer bg-light">
       <div class="container">
         <div class="row">
@@ -549,7 +289,7 @@
             <div class="row">
               <div class="col-md-5">
                 <h2 class="footer-heading mb-4">About Us</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque facere laudantium magnam voluptatum autem. Amet aliquid nesciunt veritatis aliquam.</p>
+                <p>Queen is a team of 4, our goal is to help you, the person in question, to be a more responsible digital citizen and leave a positive digital footprint!</p>
               </div>
               <div class="col-md-3 ml-auto">
                 <h2 class="footer-heading mb-4">Quick Links</h2>
